--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "mews/captcha": "~2.0",
+        "spatie/laravel-permission": "~2.7",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
