--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Libraries/"
         ],
         "psr-4": {
             "App\\": "app/"
