--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "~1.0",
         "mews/captcha": "~2.0",
         "spatie/laravel-permission": "~2.7",
-        "yajra/laravel-datatables-oracle": "~8.0"
+        "yajra/laravel-datatables-oracle": "~8.0",
+        "dingo/api": "2.0.0-alpha1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
