--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "~2.1",
         "mews/captcha": "~2.0",
         "predis/predis": "~1.0",
         "spatie/laravel-permission": "~2.7",
