--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "~3.3",
+        "itsgoingd/clockwork": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "~2.1",
